Fixed the endGame container, so there's no extra space on top of the final result message.

--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,21 @@ body {
    
 }
 
+.game-container.result {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
+    width: 500px;
+    height: auto;
+    box-sizing: border-box;
+    background-color: white;
+    border-radius: 15px;
+    box-shadow: 0 0 2px 2px;
+    margin: 0;
+}
+
 .nextButton {
     background-color: rgb(173, 173, 173);
     color:black;
@@ -57,7 +72,6 @@ body {
 }
 
 .startButton {
-    background-color: rgb(173, 173, 173);
     color:red;
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
